# nlisim

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  acinus-tet.vtk  acinus-tet.vtu  cell.html  cli.html  config.html  config.ini  config.ini.example  config.ini.unstable  coordinates.html  diffusion.html  docker-compose.yml  docker_run.sh  geometry.json.example  grid.html  index.html  module.html  molecule.html  plot.html  postprocess.html  pyproject.toml  random.html  requirements.txt  setup.cfg  setup.py  solver.html  state.html  tox.ini  util.html  validation.html
.circleci/: config.yml
complement-test/: BMB_complement_minimal.py  constants.py  dde_solver.py  dde_test.py  delay_de_solver.py  delay_de_test.py  ode_solver.py  ode_test.py  parallel_solver.py
geometry/: generator.html  generator.py  index.html  math_function.html
geometry-generator/: geometry.hdf5.REMOVED.git-id
modules/: afumigatus.html  antitnfa.html  csv_writer.html  epithelium.html  erythrocyte.html  est_b.html  fungus.html  geometry.html  hemoglobin.html  hemolysin.html  hemopexin.html  hepcidin.html  il10.html  il6.html  il8.html  index.html  iron.html  lactoferrin.html  liver.html  macrophage.html  mcp1.html  mip1b.html  mip2.html  molecules.html  neutrophil.html  phagocyte.html  plot.html  pneumocyte.html  ros.html  save.html  state_output.html  tafc.html  tgfb.html  tnfa.html  transferrin.html  visualization.html
modules/geometry/: index.html
modules/visualization/: index.html
nlisim/: __init__.py  branch-geometry.hdf5  cell.py  cell_maker.py  cli.py  config.py  coordinates.py  diffusion.py  geometry.hdf5  grid.py  module.py  module_maker.py  molecule.py  molecule_maker.py  postprocess.py  random.py  solver.py  state.py  tetsearch.py  util.py  validation.py
nlisim/geometry/: generator.py  math_function.py
nlisim/henrique_modules/: afumigatus.py  antitnfa.py  erythrocyte.py  est_b.py  geometry.py  hemoglobin.py  hemolysin.py  hepcidin.py  il10.py  il6.py  il8.py  iron.py  lactoferrin.py  liver.py  macrophage.py  mcp1.py  mip1b.py  mip2.py  molecules.py  neutrophil.py  phagocyte.py  pneumocyte.py  ros.py  state_output.py  tafc.py  tgfb.py  tnfa.py  transferrin.py
nlisim/modules/: afumigatus.py  afumigatus.py-deprecated  antitnfa.py  cell_maker.py  complement.py  csv_writer.py  endothelial.py  epithelium.py  erythrocyte.py  est_b.py  fibroblast.py  fungus.py  geometry.py  hemoglobin.py  hemolysin.py  hemopexin.py  hepcidin.py  il10.py  il6.py  il8.py  iron.py  lactoferrin.py  liver.py  macrophage.py  mcp1.py  mip1b.py  mip2.py  molecules.py  monocyte.py  neutrophil.py  phagocyte.py  plot.py  pneumocyte.py  ros.py  state_output.py  tafc.py  tgfb.py  tnfa.py  transferrin.py  visualization.py
nlisim/modulesv2/: afumigatus.py  antitnfa.py  erythrocyte.py  est_b.py  geometry.py  hemoglobin.py  hemolysin.py  hepcidin.py  il10.py  il6.py  il8.py  iron.py  lactoferrin.py  liver.py  macrophage.py  mcp1.py  mip1b.py  mip2.py  molecule.py  molecules.py  neutrophil.py  phagocyte.py  pneumocyte.py  ros.py  tafc.py  tgfb.py  tnfa.py  transferrin.py
nlisim/oldmodules/: .gitignore  afumigatus.py-deprecated  (+8 more)
notebooks/: sample.py.ipynb
oldmodules/: epithelium.html  fungus.html  index.html  macrophage.html  molecules.html  neutrophil.html  phagocyte.html  plot.html  visualization.html
simulation/: boundary.py  cell.py  cli.py  config.py  coordinates.py  differences.py  diffusion.py  driver.py  grid.py  initialization.py  module.py  molecule.py  plot.py  plugin.py  postprocess.py  solver.py  state.py  validation.py  validator.py  validators.py  vtk_support.py
test/: conftest.py  test_afumigatus.py  test_afumigatus.py-deprecated  test_cell.py  test_config.py  test_diffusion.py  test_epithelium.py  test_fungus.py  test_grid.py  test_grid_diffusion.py  test_macrophage.py  test_molecules.py  test_neutrophil.py  test_state.py  test_validator.py
(+35 files in other folders)
