[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]
exclude='\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.poetry]
name = "nlisim"
version = "0.3.6"
description = ""
authors = ["Adam Knapp <adam.knapp@medicine.ufl.edu>", "Joseph Masison", "Jonathan Beezley", "Brian Helba", "Eric Mei"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numba = "^0.56.2"
attrs = "^22.1.0"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
tox = "^3.26.0"
mypy = "^0.982"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-docstrings = "^1.6.0"
flake8-isort = "^5.0.0"
flake8-quotes = "^3.3.1"
jupyter = "^1.0.0"
pep8-naming = "^0.13.2"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
